welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: not found: value diad
  else if(getX() == getMondeHauteur()-1){setPos(diad%getMondeHauteur(),getMondeHauteur()-1)}
                                                ^