welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 1;
override def run() {
  var i:Int = 0
  ecritMessage(i)
  while(!posFinale()){
    i += 1
    posSuivante()
    ecritMessage(i)
  }
}

def posFinale():Boolean ={
  var z:Boolean = false
  if(getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1){z = true}
  return(z)
}

def posSuivante(){
  if(getY() > 0 || getY() < getMondeHauteur()-1){setPos(getX()+1,getY()-1)}
  else if(getY() == 0 && getX()<getMondeLargeur()-1){setPos(0,diag);diag += 1}
  else if(getX() == getMondeHauteur()-1){setPos(diad%getMondeHauteur(),getMondeHauteur()-1)}
}